Add ouigo-client script

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 ouigo.conf
 ouigo-config.tgz.gpg
-scionlab_rsa
-scionlab_rsa.pub
+scionlab_grid5000_frontend_rsa
+scionlab_grid5000_frontend_rsa.pub
