--- a/ouigo.conf.example
+++ b/ouigo.conf.example
@@ -3,3 +3,4 @@ OUIGO_G5K_USERNAME=dvader
 OUIGO_G5K_ACCESS_LOCATION=nancy
 OUIGO_SSH_PRIVATE_KEY=./scionlab_grid5000_frontend_rsa
 OUIGO_SSH_PUBLIC_KEY=./scionlab_grid5000_frontend_rsa.pub
+OUIGO_PERSISTENT_PATHS=/var/log:/etc/scionlab:/home/scionlab
